--- a/style.css
+++ b/style.css
@@ -80,14 +80,20 @@ h2 {
 }
 
 h3 {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   font-size: 3vw;
   letter-spacing: 0.4vw;
   margin-block: 1vmax;
 }
 
 p {
-  font-size: 1vw;
+  font-size: 1.2vw;
   margin-block: 1vmax;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 table {
@@ -95,6 +101,9 @@ table {
   border: 0.1vmax solid #3d3d3d;
   box-shadow: 1px 1px 5px 1px #797979;
   text-align: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 table thead {
   background-color: #b4e2bc;
@@ -150,6 +159,39 @@ table tbody td {
 .about {
   background-image: linear-gradient(40deg, rgb(218, 238, 240), rgb(225, 241, 223));
   padding: 1vmax 2vmax;
+}
+.about .team {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.about .team .personal-card {
+  width: 30%;
+  margin: 1vmax;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.about .team .personal-card .photo-wrapper {
+  width: 8vmax;
+  height: 8vmax;
+  border-radius: 50%;
+  box-shadow: 1px 0 5px 1px #3d3d3d;
+}
+.about .team .personal-card .photo-wrapper img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+.about .team .personal-card .name {
+  font-size: 2vw;
+  margin-block: 0.5vmax;
+}
+.about .team .personal-card .intro {
+  font-size: 1vw;
 }
 
 @keyframes notice {
