--- a/style.scss
+++ b/style.scss
@@ -68,20 +68,22 @@ h2{
     top: 38vh;
 }
 h3{
-   
+   user-select: none;
     font-size: 3vw;
     letter-spacing: 0.4vw;
     margin-block: 1vmax;
 }
 p{
-    font-size: 1vw;
+    font-size: 1.2vw;
    margin-block: 1vmax;
+   user-select: none;
 }
 table{
     border-collapse: collapse;
     border: 0.1vmax solid #3d3d3d;
     box-shadow: 1px 1px 5px 1px #797979;
     text-align: center;
+    user-select: none;
     & thead{
         background-color: #b4e2bc;
         & th{
@@ -131,6 +133,38 @@ table{
 .about{
     background-image: linear-gradient(40deg,rgb(218, 238, 240),rgb(225, 241, 223));
     padding: 1vmax 2vmax;
+    & .team{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        & .personal-card{
+           width: 30%;
+            margin: 1vmax;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+            & .photo-wrapper{
+                width: 8vmax;
+                height: 8vmax;
+                border-radius: 50%;
+                box-shadow: 1px 0 5px 1px #3d3d3d;
+                & img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+                }
+            }
+            & .name{
+                font-size: 2vw;
+                margin-block: 0.5vmax;
+            }
+            & .intro{
+                font-size: 1vw;
+            }
+        }
+    }
 }
 @keyframes notice {
     50%{
