--- a/style.scss
+++ b/style.scss
@@ -52,6 +52,9 @@ left: 65vw;
 #about{
     left: 85vw;
 }
+address{
+    font-style:normal ;
+}
 h1,h2{
     user-select: none;
    
@@ -118,6 +121,10 @@ table{
  animation-timing-function: linear;
  animation-iteration-count: 1;
 }
+::marker{
+    font-size: 2vw;
+    font-weight: 700;
+}
 .visit{
     background-image: linear-gradient(-10deg,rgb(218, 238, 240),rgb(225, 241, 223));
     padding: 1vmax 2vmax;
@@ -125,10 +132,51 @@ table{
 .stay{
     background-image: linear-gradient(40deg,rgb(218, 238, 240),rgb(225, 241, 223));
     padding: 1vmax 2vmax;
-}
+    & ol{
+        display: flex;
+        margin: 2vmax;
+        & h4{
+            font-size: 2vw;
+        }
+        & img{
+                width: 60%;
+                height: 80%;
+                border-radius: 1vmax;
+            }
+        }
+    }
+    
+
 .learn{
     background-image: linear-gradient(-10deg,rgb(218, 238, 240),rgb(225, 241, 223));
     padding: 1vmax 2vmax;
+    & .learn-layout{
+        display: flex;
+        justify-content: space-evenly;
+        & img{
+            width: 50%;
+            border-radius: 0.5vmax;
+        }
+        & .learn-text{
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            margin-inline: 0.5vmax;
+            & h4{
+                font-size: 2vw;
+            }
+            & p{
+                line-height: 2;
+                letter-spacing: 0.05vw;
+                &::first-letter{
+                    font-size: 1.5vw;
+                    color: #292929;
+                    text-shadow: 0 0 1px #292929;
+                }
+            }
+        }
+    }
 }
 .about{
     background-image: linear-gradient(40deg,rgb(218, 238, 240),rgb(225, 241, 223));
@@ -165,7 +213,48 @@ table{
             }
         }
     }
+    & .contact{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 45vh;
+        & .contact-info{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
+            height: 60%;
+        }
+        & *{
+            margin-block: 1vmax;
+        }
+        & h4{
+            font-size: 2vw;
+            letter-spacing: 0.2vw;
+        }
+        & a{
+            position: relative;
+        }
+    }
 }
+footer{
+    position: relative;
+    height: 10vh;
+    background-image: linear-gradient(10deg,#8db894,#88c07b);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+        & a{
+            position: static;
+        }
+        & img{
+            width: 3vmax;
+            height: 3vmax;
+        }
+    }
+    
+
 @keyframes notice {
     50%{
         transform: translateX(1vw);}
